# summawise

./: CHANGELOG.md  README.md  ai.py  pyproject.toml  requirements.txt  summawise.py  youtube.py
.github/workflows/: python-build.yml
summawise/: __main__.py  ai.py  assistants.py  data.py  errors.py  filesystem.py  main.py  serializable.py  settings.py  threads.py  utils.py  web.py  youtube.py
summawise/api_objects/: __init__.py  assistants.py  generic.py  threads.py
summawise/commands/: __init__.py  assistants.py  scan.py  threads.py
summawise/files/: cache.py  encodings.py  metadata.py  processing.py  utils.py
summawise/utils/: __init__.py  aot_list.py  misc.py  terminal.py  validators.py
